User management completed. Adding integration with firebase database
